add start comment

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --port 3000",
     "build": "vite build",
+    "start": "serve -s dist -l $PORT",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "heroku-postbuild": "npm run build",
